@@ -34,6 +34,9 @@ Beta  1.0.2 - xxxx-xx-xx
   -- getLong()
   -- getBoolean()
 
+- Fixed MySQL_PreparedStatementResultSet::getDouble() to return proper
+  value when the underlying type is MYSQL_TYPE_FLOAT. (Andrey)
+
 Alpha  1.0.1 - 2008-12-01
 
 - New directory layout
